<?xml version="1.0" encoding="utf-8"?> 
<!-- Demonstrates using a relative layout to create a form --> 


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@drawable/back">

    <Button android:id="@+id/medium"
            android:background="@drawable/custom_btn_black_pearl"
            android:layout_width="230dp" 
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/medium"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:padding="0dp"
            android:onClick = "toMedium"
            style="@style/btnStyleBlackpearl" /> 
            
    <Button android:id="@+id/easy"
            android:background="@drawable/custom_btn_black_pearl"
            android:layout_width="230dp" 
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/medium"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/easy"
            android:textSize="30sp"
            android:onClick="toEasy"
            android:padding="0dp"
            style="@style/btnStyleBlackpearl" />   
             
    <Button android:id="@+id/extreme"
            android:background="@drawable/custom_btn_black_pearl"
            android:layout_width="230dp" 
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/medium"
            android:layout_marginBottom="10dp"
            android:text="@string/extreme"
            android:textSize="30sp"
            android:padding="0dp"
            android:onClick="toExtreme"
            style="@style/btnStyleBlackpearl" />          
                 
</RelativeLayout>    